Updated the code with the latest sessions

--- a/app/src/main/res/layout/row_scroll.xml
+++ b/app/src/main/res/layout/row_scroll.xml
@@ -27,6 +27,7 @@
   <TextView
       android:id="@+id/tvRowText"
       tools:text="Hola"
+      android:background="@color/accentTraslucent"
       android:textColor="@android:color/white"
       android:gravity="center"
       android:layout_width="match_parent"
