--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="172dp"
-    android:background="@drawable/drawer_background"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingTop="@dimen/status_bar_height"
+    android:background="@color/accentTraslucent"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
   <ImageView
-      android:id="@+id/avatar"
+      android:id="@+id/ivAvatar"
       android:layout_width="64dp"
       android:layout_height="64dp"
       android:layout_margin="@dimen/spacing_large"
@@ -17,22 +17,22 @@
       tools:src="@mipmap/ic_launcher_round"/>
 
   <TextView
+      android:id="@+id/tvBio"
+      android:layout_below="@id/ivAvatar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_above="@+id/email"
-      android:layout_marginLeft="@dimen/spacing_large"
-      android:layout_marginStart="@dimen/spacing_large"
-      android:text="@string/drawer_header_name"
+      android:layout_margin="@dimen/spacing_large"
+      tools:text="@string/drawer_header_name"
+      android:textColor="@color/textSecondary"
       android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
   <TextView
-      android:id="@+id/email"
+      android:id="@+id/tvName"
+      android:layout_toRightOf="@id/ivAvatar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_alignParentBottom="true"
-      android:layout_marginLeft="@dimen/spacing_large"
-      android:layout_marginStart="@dimen/spacing_large"
-      android:layout_marginBottom="@dimen/spacing_large"
-      android:text="@string/drawer_header_email"
+      android:layout_margin="@dimen/spacing_large"
+      android:textColor="@color/textPrimary"
+      tools:text="@string/drawer_header_email"
       android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
 </RelativeLayout>
